--- a/frontend/src/components/Forms/InputField/InputField.module.css
+++ b/frontend/src/components/Forms/InputField/InputField.module.css
@@ -10,14 +10,14 @@
     align-self: flex-start;
     text-align: left;
     margin-left: 5px;
-    color: var(--color-text-primary)
+    color: var(--color-text-primary);
 }
 
 .inputField {
     width: 100%;
     height: 2.5rem;
     padding: 0.5rem;
-    font-size: 14px;
+    font-size: 16px;
     background: transparent;
     border: none;
     border-bottom: 3px solid var(--color-text-primary);
