--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -105,7 +105,7 @@ Link {
 
     /* NAVBAR */
     --color-navbar-background-light: rgba(250, 250, 240, 0.8);
-    --color-navbar-border-light: rgba(255, 255, 255, 0.5);
+    --color-navbar-border-light: rgba(255, 255, 255, 0.3);
     --navbar-backdrop-filter-light: blur(10px);
 
     /* TEXT (High Contrast) */
